Agrega verificacion de seguridad a controladores

--- a/src/_footer.html
+++ b/src/_footer.html
@@ -24,9 +24,37 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/ajax.js"></script>
 <script src="js/toggleNavbar.js"></script>
-<script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
+<script src="https://www.paypal.com/sdk/js?locale=es_MX&currency=MXN&client-id=AXaKjbCnOPQrKwgDgiShyp0krjWymPBs7Rso0Yi2KI6I5crN9cKtVzR0CSkF9tsNl0O5TpMTEu7h_Yf5"></script>
 <script>
-paypal.Buttons().render('#paypal-button-container');
+
+	//---PayPal---------------------------------
+	paypal.Buttons({
+		createOrder: function(data, actions) {
+			let cantidad = document.getElementById("cantidadDonativo").value;
+			// This function sets up the details of the transaction, including the amount and line item details.
+			return actions.order.create({
+				purchase_units: [{
+					amount: {
+						value: cantidad.toString(),
+					}
+				}]
+			});
+		},
+		onApprove: function(data, actions) {
+			// This function captures the funds from the transaction.
+			$.post("PayPalCliente.php",{
+				oId:data["orderID"]
+			});
+			return actions.order.capture().then(function(details) {
+				// This function shows a transaction success message to your buyer.
+				alert('Muchas Gracias ' + details.payer.name.given_name);
+			});
+		}
+	}).render('#paypal-button-container-donacion');
+	//This function displays Smart Payment Buttons on your web page.
+
+	//---PayPal---------------------------------
+
 mostrarContacto();
 </script>
 
