Finaliza paypal en sandbox

--- a/src/_footer.html
+++ b/src/_footer.html
@@ -34,6 +34,7 @@
 			// This function sets up the details of the transaction, including the amount and line item details.
 			return actions.order.create({
 				purchase_units: [{
+					description: "Donación",
 					amount: {
 						value: cantidad.toString(),
 					}
@@ -42,12 +43,12 @@
 		},
 		onApprove: function(data, actions) {
 			// This function captures the funds from the transaction.
-			$.post("PayPalCliente.php",{
+			$.post("PayPalCliente.php?caso=donacion",{
 				oId:data["orderID"]
 			});
 			return actions.order.capture().then(function(details) {
 				// This function shows a transaction success message to your buyer.
-				alert('Muchas Gracias ' + details.payer.name.given_name);
+				alert('Muchas gracias por tu donativo ' + details.payer.name.given_name);
 			});
 		}
 	}).render('#paypal-button-container-donacion');
