Arregla boton donar movil

--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -102,7 +102,7 @@
                             <?php endif; ?>
                         </ul>
                     </li>
-                    <li class="uk-parent"><button id="boton-donacion-movil" uk-toggle="target: #modal-donacion" type="button" class="uk-button uk-border-rounded uk-position-bottom-center uk-margin" style="background-color: #ffc439; color: #2c2e2f"><i class="fas fa-donate uk-margin-small-right"></i>Donar</button></li>
+                    <li class="uk-parent"><button id="boton-donacion-movil" uk-toggle="target: #modal-donacion" type="button" class="uk-button uk-border-rounded uk-align-center uk-margin  uk-margin-large-top" style="background-color: #ffc439; color: #2c2e2f"><i class="fas fa-donate uk-margin-small-right"></i>Donar</button></li>
             </ul>
         </div>
 </div>
