--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -9,7 +9,8 @@
             <ul class="uk-navbar-nav">
 
                     <div class="uk-navbar-item">
-                        <button id="boton-donacion" uk-toggle="target: #modal-donacion" type="button" class="uk-box-shadow-medium uk-button uk-border-rounded uk-text-emphasis" style="background-color: #ffc439"><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>
+<!--                        <button id="boton-donacion" uk-toggle="target: #modal-donacion" type="button" class="uk-box-shadow-medium uk-button uk-border-rounded uk-text-emphasis" style="background-color: #ffc439" ><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>-->
+                        <button id="boton-donacion" uk-toggle="target: #modal-donacion" type="button" class="uk-box-shadow-medium uk-button uk-border-rounded" uk-tooltip="title:Próximamente...; pos:bottom" disabled><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>
                     </div>
                     <li class="uk-parent "><a href="catalogo">Nuestros Perros <i class="fas fa-dog uk-margin-small-left"></i></a></li>
                     <li class="uk-parent"><a href="comoAyudar">¿Cómo ayudar? <i class="fas fa-hands-helping uk-margin-small-left"></i></a></li>
@@ -102,7 +103,10 @@
                             <?php endif; ?>
                         </ul>
                     </li>
-                    <li class="uk-parent"><button id="boton-donacion-movil" uk-toggle="target: #modal-donacion" type="button" class="uk-button uk-border-rounded uk-align-center uk-margin  uk-margin-large-top" style="background-color: #ffc439; color: #2c2e2f"><i class="fas fa-donate uk-margin-small-right"></i>Donar</button></li>
+                    <li class="uk-parent">
+<!--                        <button id="boton-donacion-movil" uk-toggle="target: #modal-donacion" type="button" class="uk-button uk-border-rounded uk-align-center uk-margin  uk-margin-large-top" style="background-color: #ffc439; color: #2c2e2f"><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>-->
+                        <button id="boton-donacion-movil" uk-toggle="target: #modal-donacion" type="button" class="uk-button uk-border-rounded uk-align-center uk-margin  uk-margin-large-top" uk-tooltip="title:Próximamente...; pos:bottom" disabled><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>
+                    </li>
             </ul>
         </div>
 </div>
