Seccion de perros adoptados terminada. Falta aprobacion

--- a/src/_navbar.html
+++ b/src/_navbar.html
@@ -12,7 +12,25 @@
 <!--                        <button id="boton-donacion" uk-toggle="target: #modal-donacion" type="button" class="uk-box-shadow-medium uk-button uk-border-rounded uk-text-emphasis" style="background-color: #ffc439" ><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>-->
                         <button id="boton-donacion" uk-toggle="target: #modal-donacion" type="button" class="uk-box-shadow-medium uk-button uk-border-rounded" uk-tooltip="title:Próximamente...; pos:bottom" disabled><i class="fas fa-donate uk-margin-small-right"></i>Donar</button>
                     </div>
-                    <li class="uk-parent "><a href="catalogo">Nuestros Perros <i class="fas fa-dog uk-margin-small-left"></i></a></li>
+              <!--  <li class="uk-parent "><a href="catalogo">Nuestros Perros <i class="fas fa-dog uk-margin-small-left"></i></a></li>-->
+<!--------------------------------------------------------------------------->
+                    <li class="uk-parent "><a>Nuestros Perros <i class="fas fa-dog uk-margin-small-left"></i></a>
+                        <div class="uk-navbar-dropdown uk-width-auto uk-text-left">
+                                <ul class="uk-nav uk-navbar-dropdown-nav uk-margin-right">
+                                    <li class="uk-text-nowrap">
+                                        <a href="catalogo">Perros en el refugio
+                                            <i class="fas fa-paw uk-margin-small-left"></i>
+                                        </a>
+                                    </li>
+                                    <li class="uk-text-nowrap">
+                                        <a href="adoptados">Perros adoptados
+                                            <i class="fas fa-heart uk-margin-small-left"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                        </div>
+                    </li>
+<!--------------------------------------------------------------------------->
                     <li class="uk-parent"><a href="comoAyudar">¿Cómo ayudar? <i class="fas fa-hands-helping uk-margin-small-left"></i></a></li>
                     <li class="uk-parent"><a href="preguntasFrecuentes">Preguntas Frecuentes <i class="fas fa-question uk-margin-small-left"></i></a></li>
                     <li class="uk-parent"><a href="contactanos">Contáctanos <i class="fas fa-comments uk-margin-small-left"></i></a></li>
